# python-project-49

./: .gitignore  Makefile  README.md  demo3.cast  demo4.cast  pyproject.toml
asciinema_casts/: demo.cast  demo2.cast  demo5.cast
brain_games/: cli.py  game_engine.py
brain_games/games/: game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  game_intro.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
